app/styles/inputs.less
.input-container {
  margin-bottom: 20px;
  position: relative;
  display: flex;

  &.input-container--no-label {
    width: 100%;

    .input-label {
      display: none;
    }

    .input-wrapper {
      width: 100%;
    }
  }

  &.input-container--no-margin {
    margin-bottom: 0;
  }
}

.input-label {
  width: 30%;
  padding-right: 15px;
}

.input-wrapper {
  width: 70%;
}

input[type=text],
input[type="password"],
textarea {
  border: 1px solid @day-input-border;
  background: @day-input-bg;
  margin-bottom: 0;

  &:focus {
    box-shadow: none;
    background: @day-input-bg;
    border-color: @day-focus-border;
  }

  &.input--transparent {
    border: 0;
    border-bottom: 1px dashed @grey;
    padding: 0;
    height: 20px;
    background: transparent;
    border-radius: 0;
  }
}

.checkbox {
  margin-bottom: 0;

  label {
    line-height: 20px;

    &:before {
      background: transparent;
      border-color: @day-input-border;
    }
  }
}

.multiselect {
  min-height: 36px;
}

.multiselect__select {
  z-index: 10;
  padding: 0;
  width: auto;
  height: auto;
  right: 8px;
  top: 0px;
  line-height: 32px;
  position: relative;

  &:before {
    font-family: FontAwesome;
    content: '\f078';
    border: none;
    font-size: 9px;
    position: absolute;
    right: 0;
    top: 2px;
  }
}

.multiselect__tags {
  padding: 0;
  border: none;
  height: 0;
  min-height: 0;
  .radius;

  input[type="text"] {
    cursor: pointer;
  }
}

.multiselect__input,
.multiselect__single {
  &:hover, &:focus {
    background: @day-input-bg;
    border-color: @day-focus-border;
  }
}

.multiselect__content {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
  border: 1px solid @day-focus-border;
  top: 35px;
  background: @day-input-bg;
  list-style-type: none;
  margin: 0;
  width: 100%;
  z-index: 10;
  position: relative;
  max-height: 300px;
  overflow-y: auto;
}

.multiselect__element {
  font-size: 13px;
}

.multiselect__option {
  padding: 0px 8px;
  height: 36px;
  min-height: 0;
  line-height: 36px;
  .transition;
  display: block;
  cursor: pointer;

  &:after {
    display: none;
  }
}

.multiselect__option--highlight {
  background: @day-hover;
  color: @navy;

  &:after {
    display: none;
  }
}

.multiselect__option--selected {
  background: @teal-bright;
  color: @white;

  &.multiselect__option--highlight {
    background: @teal-bright;

    &:after {
      display: none;
    }
  }

  &:after {
    display: none;
  }
}

.multiselect--disabled {
  opacity: .5;

  &:focus {
    outline: none;
  }

  .multiselect__tags {
    .multiselect__input {
      cursor: not-allowed;
    }
  }
}

.night-theme {
  input[type="text"],
  input[type="password"],
  textarea {
    background: @night-secondary;
    color: @white;
    border-color: transparent;

    &.input--transparent {
      border-bottom: 1px dashed @grey;
    }
  }

  .multiselect__content {
    background: @night-secondary;
    border-color: @night-secondary;
    color: @white;
  }

  .multiselect__option--highlight {
    background: @night-hover;
    color: @white;
  }

  .input-wrapper--inverted {
    input[type="text"] {
      background: @night-bg;
    }

    .multiselect__content {
      background: @night-bg;
    }
  }
}

